UPDATE: Daily Challenge 29,4
Added negative value support.

--- a/Notebooks/Daily Challenge 29.4.ipynb
+++ b/Notebooks/Daily Challenge 29.4.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def rearrange_sum(S, terms=100):\n",
-    "    harmonic_series = [(-1)**x * (1/x) for x in range(1, (2*terms)+1)]\n",
+    "    harmonic_series = [(-1)**(x +1) * (1/x) for x in range(1, (2*terms)+1)]\n",
     "    harmonic_series_positive = [x for x in harmonic_series if x > 0]\n",
     "    harmonic_series_negative = [x for x in harmonic_series if x < 0]\n",
     "    working_series = []\n",
-    "    if S > 0:\n",
-    "        for x in range(terms):\n",
-    "            if sum(working_series) < S:\n",
-    "                working_series.append(harmonic_series_positive[0])\n",
-    "                del harmonic_series_positive[0]\n",
-    "            if sum(working_series) > S:\n",
-    "                working_series.append(harmonic_series_negative[0])\n",
-    "                del harmonic_series_negative[0]\n",
+    "    for x in range(terms):\n",
+    "        if sum(working_series) < S:\n",
+    "            working_series.append(harmonic_series_positive[0])\n",
+    "            del harmonic_series_positive[0]\n",
+    "        if sum(working_series) > S:\n",
+    "            working_series.append(harmonic_series_negative[0])\n",
+    "            del harmonic_series_negative[0]\n",
     "    return working_series"
    ]
   }
