UPDATE: Daily Challenge 29.4
Added checks.

--- a/Notebooks/Daily Challenge 29.4.ipynb
+++ b/Notebooks/Daily Challenge 29.4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +15,50 @@
     "        if sum(working_series) < S:\n",
     "            working_series.append(harmonic_series_positive[0])\n",
     "            del harmonic_series_positive[0]\n",
-    "        if sum(working_series) > S:\n",
+    "        elif sum(working_series) > S:\n",
     "            working_series.append(harmonic_series_negative[0])\n",
     "            del harmonic_series_negative[0]\n",
     "    return working_series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.0, -0.5, 0.3333333333333333, -0.25, 0.2]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rearrange_sum(0.69314718056,5) # Checking if ln(2) gives the harmonic series."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.0, 0.3333333333333333, 0.2, -0.5, 0.14285714285714285]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rearrange_sum(1.5,5) # Checking if 1.5 gives the expected series."
    ]
   }
  ],
